5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1865_1535.log
== TEST (2019-07-04 10:19:39) 
-- CODE:
x= float(input("numero real: "))
k = int(input("repeticoes: "))
i=1
arc=0
while(i<k):
	arc=((-x**i))/i + arc
	i=i+2
print(round(arc,6)
-- ERROR:
File "XXXX", line 9
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:20:01) 
-- CODE:
x= float(input("numero real: "))
k = int(input("repeticoes: "))
i=1
arc=0
while(i<k):
	arc=((-x**i))/i + arc
	i=i+2

print(round(arc,6)
-- ERROR:
File "XXXX", line 10
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:21:02) 
-- CODE:
x= float(input("numero real: "))
k = int(input("repeticoes: "))
i=1
arc=0
while(i < k):
	arc =((-x**i))/i + arc
	i = i+2

print(round(arc,6)
-- ERROR:
File "XXXX", line 10
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:21:15) 
-- CODE:
x= float(input("numero real: "))
k = int(input("repeticoes: "))
i=1
arc=0
while(i < k):
	arc =((-x**i))/i + arc
	i = i+2

print(round(arc,6)

-- ERROR:
File "XXXX", line 10
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:21:35) 
-- CODE:
x= float(input("numero real: "))
k = int(input("repeticoes: "))
i=1
arc=0
while(i < k):
	arc =((-x**i))/i + arc
	i = i+2
	K=K+1
print(round(arc,6)

-- ERROR:
File "XXXX", line 10
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:23:12) 
-- CODE:
x= float(input("numero real: "))
k = int(input("repeticoes: "))
i=1
arc=0
while(i < k):
	arc =((-x**i))/i + arc
	i = i+2
	
print(round(arc,6)

-- ERROR:
File "XXXX", line 10
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:23:31) 
-- CODE:
x= float(input("numero real: "))
k = int(input("repeticoes: "))
i=1
arc=0
while(i < k):
	arc =((-x**i))/i + arc
	i = i+2
	
print(round(arc,6))

-- OUTPUT:
-0.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:24:17) 
-- CODE:
x= float(input("numero real: "))
k = int(input("repeticoes: "))
i=1
arc=0
while(i < k):
	arc =((x**i))/i + arc
	i = i+2
	
print(round(arc,6))

-- OUTPUT:
0.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:25:15) 
-- CODE:
x= float(input("numero real: "))
k = int(input("repeticoes: "))
i=1
arc=0
while(i < k):
	arc =((x**i))/i - arc
	i = i+2
	
print(round(arc,6))

-- OUTPUT:
0.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:26:32) 
-- CODE:
x= float(input("numero real: "))
k = int(input("repeticoes: "))
i=1
arc=0
while(i < k):
	arc =-((x**i))/i  arc
	i = i+2
	
print(round(arc,6))

-- ERROR:
File "XXXX", line 6
    arc =-((x**i))/i  arc
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:26:43) 
-- CODE:
x= float(input("numero real: "))
k = int(input("repeticoes: "))
i=1
arc=0
while(i < k):
	arc =-(x**i)/i  arc
	i = i+2
	
print(round(arc,6))

-- ERROR:
File "XXXX", line 6
    arc =-(x**i)/i  arc
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:26:54) 
-- CODE:
x= float(input("numero real: "))
k = int(input("repeticoes: "))
i=1
arc=0
while(i < k):
	arc =-(x**i)/i + arc
	i = i+2
	
print(round(arc,6))

-- OUTPUT:
-0.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:27:07) 
-- CODE:
x= float(input("numero real: "))
k = int(input("repeticoes: "))
i=1
arc=0
while(i < k):
	arc =(x**i)/i + arc
	i = i+2
	
print(round(arc,6))

-- OUTPUT:
0.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:28:32) 
-- CODE:
x= float(input("numero real: "))
k = int(input("repeticoes: "))
i=1
arc=0
while(i < k):
	if((i//2!=0):
		arc= -arc
	arc =(x**i)/i + arc
	i = i+2
	
print(round(arc,6))

-- ERROR:
File "XXXX", line 6
    if((i//2!=0):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:28:38) 
-- CODE:
x= float(input("numero real: "))
k = int(input("repeticoes: "))
i=1
arc=0
while(i < k):
	if((i//2=!0):
		arc= -arc
	arc =(x**i)/i + arc
	i = i+2
	
print(round(arc,6))

-- ERROR:
File "XXXX", line 6
    if((i//2=!0):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:28:56) 
-- CODE:
x= float(input("numero real: "))
k = int(input("repeticoes: "))
i=1
arc=0
while(i < k):
	if((i//2!=0):
		arc= -arc
	arc =(x**i)/i + arc
	i = i+2
	
print(round(arc,6))

-- ERROR:
File "XXXX", line 6
    if((i//2!=0):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:30:02) 
-- CODE:
x= float(input("numero real: "))
k = int(input("repeticoes: "))
i=1
arc=0
while(i < k):
	arc =(x**i)/i - arc
	i = i+2
	
	
print(round(arc,6))

-- OUTPUT:
0.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:30:23) 
-- CODE:
x= float(input("numero real: "))
k = int(input("repeticoes: "))
i=1
arc=0
while(i < k):
	arc =(x**i)/i - arc
	i = i+2
	
arc= -(arc)	
print(round(arc,6))

-- OUTPUT:
-0.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 10:30:32) 
-- CODE:
x= float(input("numero real: "))
k = int(input("repeticoes: "))
i=1
arc=0
while(i < k):
	arc =(x**i)/i - arc
	i = i+2
	
arc= -(arc)	
print(round(arc,6))

-- EXECUTION TIME:
0.636364
-- TEST CASE 1:
---- input:
0.6
3
---- correct output:
0.543552
---- user output:
-0.6
-- TEST CASE 2:
---- input:
0.25
3
---- correct output:
0.244987
---- user output:
-0.25
-- TEST CASE 3:
---- input:
0.35
4
---- correct output:
0.336667
---- user output:
0.335708
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:30:45) 
-- CODE:
x= float(input("numero real: "))
k = int(input("repeticoes: "))
i=1
arc=0
while(i < k):
	arc =(x**i)/i - arc
	i = i+2
	
arc= -(arc)	
print(round(arc,6))

-- OUTPUT:
-0.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:31:03) 
-- CODE:
x= float(input("numero real: "))
k = int(input("repeticoes: "))
i=1
arc=0
while(i < k):
	arc =(x**i)/i + arc
	i = i+2
	arc= -(arc)	
print(round(arc,6))

-- OUTPUT:
-0.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:31:25) 
-- CODE:
x= float(input("numero real: "))
k = int(input("repeticoes: "))
i=1
arc=0
while(i < k):
	arc =(x**i)/i + arc
	i = i+2
	
print(round(arc,6))

-- OUTPUT:
0.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:33:54) 
-- CODE:
x= float(input("numero real: "))
k = int(input("repeticoes: "))
i=1
j=2
arc=0
while(i < k):
	arc =((x**i)/i)((-1)**j) + arc
	i = i+2
	j=j+1
	
print(round(arc,6))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    arc =((x**i)/i)((-1)**j) + arc
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:35:30) 
-- CODE:
x= float(input("numero real: "))
k = int(input("repeticoes: "))
i=1
j=2
arc=0
while(i < k):
	arc =((x**i)/i)(-1**j) + arc
	i = i+2
	j=j+1
	
print(round(arc,6))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    arc =((x**i)/i)(-1**j) + arc
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:37:31) 
-- CODE:
x= float(input("numero real: "))
k = int(input("repeticoes: "))
i=1
j=2
arc=0
while(i < k):
	arc =((x**i)/i)((-1)**j) + arc
	i = i+2
	j=j+1
	
print(round(arc,6))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    arc =((x**i)/i)((-1)**j) + arc
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:37:45) 
-- CODE:
x= float(input("numero real: "))
k = int(input("repeticoes: "))
i=1
j=2
arc=0
while(i < k):
	arc =((x**i)/i)*((-1)**j) + arc
	i = i+2
	j=j+1
	
print(round(arc,6))

-- OUTPUT:
0.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 10:37:54) 
-- CODE:
x= float(input("numero real: "))
k = int(input("repeticoes: "))
i=1
j=2
arc=0
while(i < k):
	arc =((x**i)/i)*((-1)**j) + arc
	i = i+2
	j=j+1
	
print(round(arc,6))

-- EXECUTION TIME:
0.744741
-- TEST CASE 1:
---- input:
0.6
3
---- correct output:
0.543552
---- user output:
0.6
-- TEST CASE 2:
---- input:
0.25
3
---- correct output:
0.244987
---- user output:
0.25
-- TEST CASE 3:
---- input:
0.35
4
---- correct output:
0.336667
---- user output:
0.335708
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:38:10) 
-- CODE:
x= float(input("numero real: "))
k = int(input("repeticoes: "))
i=1
j=2
arc=0
while(i < k):
	arc =((x**i)/i)*((-1)**j) + arc
	i = i+2
	j=j+1
	
print(round(arc,6))

-- OUTPUT:
0.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:38:56) 
-- CODE:
x= float(input("numero real: "))
k = int(input("repeticoes: "))
i=1
j=2
arc=0
while(i < k):
	arc =((x**i)/i)*((-1)**j) + arc
	i = i+2
	j=j+1
	
print(round(arc,6))

-- OUTPUT:
0.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:39:28) 
-- CODE:
x= float(input("numero real: "))
k = int(input("repeticoes: "))
i=1
j=0
arc=0
while(i < k):
	arc =((x**i)/i)*((-1)**j) + arc
	i = i+2
	j=j+1
	
print(round(arc,6))

-- OUTPUT:
0.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:39:47) 
-- CODE:
x= float(input("numero real: "))
k = int(input("repeticoes: "))
i=1
j=0
arc=0
while(j < k):
	arc =((x**i)/i)*((-1)**j) + arc
	i = i+2
	j=j+1
	
print(round(arc,6))

-- OUTPUT:
0.543552
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 10:39:56) 
-- CODE:
x= float(input("numero real: "))
k = int(input("repeticoes: "))
i=1
j=0
arc=0
while(j < k):
	arc =((x**i)/i)*((-1)**j) + arc
	i = i+2
	j=j+1
	
print(round(arc,6))

-- EXECUTION TIME:
1.06015
-- TEST CASE 1:
---- input:
0.6
3
---- correct output:
0.543552
---- user output:
0.543552
-- TEST CASE 2:
---- input:
0.25
3
---- correct output:
0.244987
---- user output:
0.244987
-- TEST CASE 3:
---- input:
0.35
4
---- correct output:
0.336667
---- user output:
0.336667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
